[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-moderation-openenv"
version = "1.0.0"
description = "AI Content Moderation Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ajinkya Kakade", email = "ajinkyakakde510@gmail.com"}
]

dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.0.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "gymnasium>=0.29.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
content-moderation-openenv = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server", "environment", "tasks", "graders", "agents", "backend"]
